# agent-readiness-rules

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  LICENSE-NOTICES.md  Makefile  PROPOSAL_rules_loop.md  README.md  SECURITY.md  TRADEMARK.md  manifest.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
rules/cognitive_load/: agent_docs.canonical.yaml  agent_docs.present.yaml  code.complexity.yaml  cognitive_load.readme_root_present.yaml  docs.contributing_guide.yaml  git.churn_hotspots.yaml  meta.consistency.yaml  naming.search_precision.yaml  readme.has_run_instructions.yaml  repo_shape.large_files.yaml  repo_shape.token_budget.yaml  repo_shape.top_level_count.yaml
rules/feedback/: agent_docs.ci_feedback_loop.yaml  ci.configured.yaml  deploy.smoke_check.yaml  feedback.test_coverage_hint.yaml  hooks.configured.yaml  lint.configured.yaml  manifest.detected.yaml  manifest.lockfile_present.yaml  test_command.discoverable.yaml  typecheck.configured.yaml
rules/flow/: branch_rulesets.configured.yaml  devcontainer.present.yaml  entry_points.detected.yaml  env.example_parity.yaml  git.has_history.yaml  headless.no_setup_prompts.yaml  headless.unrunnable_e2e.yaml  makefile.help_target.yaml  setup.command_count.yaml  templates.present.yaml  workflow.concurrency_guard.yaml
rules/safety/: gitignore.covers_junk.yaml  safety.dependency_automation.yaml  safety.gitleaks_config.yaml  secrets.basic_scan.yaml  security.policy_present.yaml
scripts/: add_action_contract.py  regen_snapshots.py
src/agent_readiness_rules/: __init__.py
tests/expected/: broken.json  good.json  (+2 more)
